Added: send confirmed state support
